package com.example.libraryprojectmusmid.model.book;

public enum BookStatus {
    AVAILABLE,
    BORROWED,
    RESERVED,
    LOST
}

